--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".WeatherActivity"></activity>
+        <activity android:name=".Settings" />
         <activity android:name=".CityChooser" />
         <activity android:name=".MainActivity">
             <intent-filter>
